PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? Jun 2009, PHP 5.2.10
- Fixed bug #48557 (Numeric string keys in Apache Hashmaps are not cast to
  integers). (David Zuelke)
- Fixed bug #48514 (cURL extension uses same resource name for simple and
  multi APIs). (Felipe)
- Fixed bug #48441 (ldap_search() sizelimit, timelimit and deref options 
  persist). (Patrick)
- Fixed missing erealloc() in fix for Bug #40091 in spl_autoload_register.
  (Greg)

11 Jun 2009, PHP 5.2.10RC2
- Updated timezone database to version 2009.9 (2009i) (Derick)
- Added "ignore_errors" option to http fopen wrapper. (David Zulke, Sara)

- Fixed bug #48518 (curl crashes when writing into invalid file handle). (Tony)
- Fixed bug #48469 (ldap_get_entries() leaks memory on empty search results).
  (Patrick)
- Fixed bug #48456 (CPPFLAGS not restored properly in phpize.m4).
  (Jani, spisek at kerio dot com)
- Fixed bug #48448 (Compile failure under IRIX 6.5.30 building cast.c). 
  (Kalle)
- Fixed bug #48434 (Improve memory_get_usage() accuracy). (Arnaud)
- Fixed bug #48416 (Force a cache limit in ereg() to stop excessive memory usage).
  (Scott)
- Fixed bug #48409 (Crash when exception is thrown while passing function 
  arguments). (Arnaud)
- Fixed bug #48378 (exif_read_data() segfaults on certain corrupted .jpeg 
  files). (Pierre)
- Fixed bug #48359 (Script hangs on snmprealwalk if OID is not
  increasing). (Ilia, simonov at gmail dot com)
- Fixed bug #48273 (snmp*_real_walk() returns SNMP errors as values).
  (Ilia, lytboris at gmail dot com)
- Fixed bug #48247 (Crash on errors during startup). (Stas)
- Fixed bug #47836 (array operator [] inconsistency when the array has
  PHP_INT_MAX index value). (Matt)
- Fixed bug #47042 (cgi sapi is incorrectly removing SCRIPT_FILENAME).
  (Sriram Natarajan, David Soria Parra)